Bug 545149 - Fix various issues with winless plugin context menus. r=bent.