dom/plugins/PluginInstanceChild.h
@@ -197,7 +197,14 @@ private:
 
     // Quirks mode support for various plugin mime types
     enum PluginQuirks {
-        QUIRK_SILVERLIGHT_WINLESS_INPUT_TRANSLATION = 1, // Win32
+        // Win32: Translate mouse input based on WM_WINDOWPOSCHANGED
+        // windowing events due to winless shared dib rendering. See
+        // WinlessHandleEvent for details.
+        QUIRK_SILVERLIGHT_WINLESS_INPUT_TRANSLATION = 1,
+        // Win32: Hook TrackPopupMenu api so that we can swap out parent
+        // hwnds. The api will fail with parents not associated with our
+        // child ui thread. See WinlessHandleEvent for details.
+        QUIRK_WINLESS_TRACKPOPUP_HOOK = 2,
     };
 
     void InitQuirksModes(const nsCString& aMimeType);
@@ -217,6 +224,9 @@ private:
     void ResetNestedEventHook();
     void SetNestedInputPumpHook();
     void ResetPumpHooks();
+    void CreateWinlessPopupSurrogate();
+    void DestroyWinlessPopupSurrogate();
+    void InitPopupMenuHook();
     void InternalCallSetNestedEventState(bool aState);
     static LRESULT CALLBACK DummyWindowProc(HWND hWnd,
                                             UINT message,
@@ -236,6 +246,13 @@ private:
     static LRESULT CALLBACK NestedInputPumpHook(int code,
                                                 WPARAM wParam,
                                                 LPARAM lParam);
+    static BOOL WINAPI TrackPopupHookProc(HMENU hMenu,
+                                          UINT uFlags,
+                                          int x,
+                                          int y,
+                                          int nReserved,
+                                          HWND hWnd,
+                                          CONST RECT *prcRect);
 #endif
 
     const NPPluginFuncs* mPluginIface;
@@ -254,11 +271,10 @@ private:
     WNDPROC mPluginWndProc;
     HWND mPluginParentHWND;
     HHOOK mNestedEventHook;
-    HHOOK mNestedPumpHook;
     int mNestedEventLevelDepth;
     bool mNestedEventState;
     HWND mCachedWinlessPluginHWND;
-    UINT_PTR mEventPumpTimer;
+    HWND mWinlessPopupSurrogateHWND;
     nsIntPoint mPluginSize;
     nsIntPoint mPluginOffset;
 #endif
